--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
         h2{
             text-align: center;
-            color: browns;
+            color: brown;
         }
     </style>
 </head>
